src/test/java/com/syntaxerror/quehayut/QueHayUtApplicationTests.java
package com.syntaxerror.quehayut;

import org.junit.jupiter.api.Test;
import org.springframework.boot.test.context.SpringBootTest;

@SpringBootTest
class QueHayUtApplicationTests {

	@Test
	void contextLoads() {
	}

}
